app/cruming-ai/deployment.yaml
# apps/cruming-ai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cruming-ai
  namespace: cruming-ai
  labels:
    app: cruming-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cruming-ai
  template:
    metadata:
      labels:
        app: cruming-ai
    spec:
      nodeSelector: # 특정 노드에만 배포
        node-role.kubernetes.io/ai: "true"
      tolerations:
        - key: "dedicated"                 # Toleration 설정
          operator: "Equal"
          value: "ai"
          effect: "NoSchedule"
      containers:
        - name: cruming-ai
          image: minyubo/cruming-ai:3
          ports:
            - containerPort: 8000
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: cruming-ai-service
#spec:
#  selector:
#    app: cruming-ai
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 5000
#  type: ClusterIP
