app/cruming-ai/service.yaml
# app/cruming-ai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cruming-ai-service
  namespace: cruming-ai  # 네임스페이스 설정
spec:
  selector:
    app: cruming-ai
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
