app/cruming-ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cruming-ai-ingress
  namespace: cruming-ai
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cruming.site
      http:
        paths:
          - path: /ai/
            pathType: Prefix
            backend:
              service:
                name: cruming-ai-service
                port:
                  number: 8000
    - host: www.cruming.site
      http:
        paths:
          - path: /ai/
            pathType: Prefix
            backend:
              service:
                name: cruming-ai-service
                port:
                  number: 8000
